# AgentFlow

./: .cade-todo.md  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GoAA_AgentFlow_Policy.md  IMPACT_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PLAN.md  PLAN.md.rej  PLAN_v0.3.md  README.md  REPORT.md  output.txt
.abacusai/tmp/: terminal_output_1_1771957584533.txt
.cade/: memory.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: AGENT.md  ASYNC_AGENT.md  CONTINUOUS_RAG.md  DOCUMENT_PROCESSING.md  DYNAMIC-ORCHESTRATOR-DOC.md  DYNAMIC-ORCHESTRATOR.md  DYNAMIC_ORCHESTRATOR.md  ERROR_HANDLING.md  HITL.md  MAPREDUCE.md  MCP_CLIENT.md  MCP_SERVER.md  MCP_SERVER_BLOCKED_SHELL.md  MULTI_AGENT.md  ORCHESTRATOR_MULTI_AGENT.md  ORCHESTRATOR_WITH_TOOLS.md  PLAN_AND_EXECUTE.md  RAG.md  REACT.md  REFLECTION.md  REPL.md  ROUTING.md  RPI.md  RUST_AGENTIC_SKILLS.md  SECURITY_AUDITOR.md  SELF_CORRECTING_CODER.md  SKILL_DOC_PROCESS.md  STRUCTURED_OUTPUT.md  TYPED_FLOW.md  WORKFLOW.md  agent.rs  async_agent.md  async_agent.rs  continuous_rag.rs  document_processing.md  document_processing.rs  dynamic_orchestrator.md  dynamic_orchestrator.rs  error_handling.md  error_handling.rs  (+32 more)
src/: lib.rs
src/core/: batch.rs  error.rs  error.rs.orig  flow.rs  mod.rs  mod.rs.rej  node.rs  parallel.rs  store.rs  telemetry.rs  typed_flow.rs  typed_flow.rs.orig  typed_store.rs
src/mcp/: client.rs  mod.rs  mod.rs.rej  server.rs
src/patterns/: agent.rs  batchflow.rs  hitl.rs  mapreduce.rs  mod.rs  multi_agent.rs  rag.rs  rpi.rs  skill.rs  structured_output.rs  workflow.rs
src/skills/: mod.rs
src/utils/: mod.rs  tool.rs
tests/: agent.rs  flow.rs  hitl.rs  mapreduce.rs  mcp_integration.rs  mcp_security.rs  multi_agent.rs  process_timeout_cleanup.rs  rag.rs  rpi.rs  typed_flow.rs  typed_flow.rs.orig  workflow.rs
tools/: local-axum-server.rs
