[package]
name = "agentflow"
version = "0.1.2"
authors = ["Engr. Stephen Ezekwem <stephen.ezekwem@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A 100-line minimalist LLM framework for Agents, RAG, Workflows, etc."
repository = "https://github.com/EzekTec-Inc/AgentFlow"
keywords = ["llm", "agent", "rag", "workflow", "async"]
categories = ["asynchronous", "ai", "AIM Alberta"]

[dependencies]
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
dyn-clone = "1.0.20"
chrono = { version = "0.4", features = ["serde"] }
inquire = "0.6"
qdrant-client = "1.15.0"
owo-colors = "4"
serde_yaml = { version = "0.9.34", optional = true }
tracing = "0.1.41"

[dev-dependencies]
rig = { package = "rig-core", version = "0.16.0" }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[example]]
name = "agent"
path = "examples/agent.rs"

[[example]]
name = "async-agent"
path = "examples/async_agent.rs"

[[example]]
name = "workflow"
path = "examples/workflow.rs"

[[example]]
name = "rag"
path = "examples/rag.rs"

[[example]]
name = "multi-agent"
path = "examples/multi_agent.rs"

[[example]]
name = "mapreduce"
path = "examples/mapreduce.rs"

[[example]]
name = "orchestrator-multi-agent"
path = "examples/orchestrator_multi_agent.rs"

[[example]]
name = "structured-output"
path = "examples/structured_output.rs"

[[example]]
name = "rust-agentic-skills"
path = "examples/rust_agentic_skills.rs"
required-features = ["skills"]

[[example]]
name = "document-processing"
path = "examples/document_processing.rs"
required-features = ["skills"]

[features]
skills = ["dep:serde_yaml"]
mcp = ["skills"]

[[example]]
name = "error-handling"
path = "examples/error_handling.rs"

[[example]]
name = "react"
path = "examples/react.rs"

[[example]]
name = "reflection"
path = "examples/reflection.rs"

[[example]]
name = "plan-and-execute"
path = "examples/plan_and_execute.rs"

[[example]]
name = "routing"
path = "examples/routing.rs"

[[example]]
name = "repl"
path = "examples/repl.rs"

[[example]]
name = "rpi"
path = "examples/rpi.rs"

[[example]]
name = "orchestrator-with-tools"
path = "examples/orchestrator_with_tools.rs"

[[example]]
name = "typed-flow"
path = "examples/typed_flow.rs"

